feat: simplify home nav, move updates feed, and polish iOS/mobile UX

--- a/src/index.css
+++ b/src/index.css
@@ -44,6 +44,13 @@ body {
   -webkit-tap-highlight-color: transparent;
 }
 
+button,
+input,
+select,
+textarea {
+  font: inherit;
+}
+
 .full-screen {
   height: 100dvh;
   width: 100vw;
